--- a/config/backend/backend.env
+++ b/config/backend/backend.env
@@ -1,4 +1,4 @@
-PORT=3002
+PORT=3000
 NODE_ENV=development
 DEMO=false
 
@@ -7,12 +7,10 @@ SWAGGER_DOCUMENTATION=true
 API_URL=http://localhost:3002/
 WEB_APP_URL=http://localhost:3000/
 
-VAULT_CONNECTION_STRING=<secret>@<url>/v1
-RABBITMQ_CONNECTION_STRING=amqp://<user>:<password>@<host>
-HARBOR_CONNECTION_STRING=<user>:<password>@<url>/api/v2.0/
+RABBITMQ_CONNECTION_STRING=amqp://<user>:<password>@ui-mq
 
 TYPEORM_CONNECTION=mysql
-TYPEORM_HOST=pht-ui-db
+TYPEORM_HOST=ui-db
 TYPEORM_USERNAME=root
 TYPEORM_PASSWORD=start123
 TYPEORM_DATABASE=app
