--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
 node_modules
 
-.env.backend
-.env.frontend
 .env
 
 docker-compose.yml
@@ -71,7 +69,7 @@ typings/
 .yarn-integrity
 
 # dotenv environment variables file
-.env
+config/.env
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
