--- a/config/backend/example.env
+++ b/config/backend/example.env
@@ -7,7 +7,9 @@ SWAGGER_DOCUMENTATION=true
 API_URL=http://localhost:3002/
 WEB_APP_URL=http://localhost:3000/
 
+VAULT_CONNECTION_STRING=<secret>@<url>/v1
 RABBITMQ_CONNECTION_STRING=amqp://<user>:<password>@ui-mq
+HARBOR_CONNECTION_STRING=<user>:<password>@<url>/api/v2.0/
 
 TYPEORM_CONNECTION=mysql
 TYPEORM_HOST=ui-db
