fixed merge conflicts

--- a/config/backend/example.env
+++ b/config/backend/example.env
@@ -7,16 +7,12 @@ SWAGGER_DOCUMENTATION=true
 API_URL=http://localhost:3002/
 WEB_APP_URL=http://localhost:3000/
 
-<<<<<<< HEAD
-RABBITMQ_CONNECTION_STRING=amqp://<user>:<password>@ui-mq
-=======
 VAULT_CONNECTION_STRING=<secret>@<url>/v1
-RABBITMQ_CONNECTION_STRING=amqp://<user>:<password>@ui-mq
+RABBITMQ_CONNECTION_STRING=amqp://root:start123@pht-ui-mq
 HARBOR_CONNECTION_STRING=<user>:<password>@<url>/api/v2.0/
->>>>>>> 756e1f97dabe2ac66153c2a43f487ca40ef77d6b
 
 TYPEORM_CONNECTION=mysql
-TYPEORM_HOST=ui-db
+TYPEORM_HOST=pht-ui-db
 TYPEORM_USERNAME=root
 TYPEORM_PASSWORD=start123
 TYPEORM_DATABASE=app
