--- a/config/backend/example.env
+++ b/config/backend/example.env
@@ -1,6 +1,5 @@
 PORT=3000
 NODE_ENV=development
-DEMO=false
 
 SWAGGER_DOCUMENTATION=true
 
@@ -22,3 +21,6 @@ TYPEORM_LOGGING=false
 TYPEORM_ENTITIES=src/database/entities.ts
 TYPEORM_SUBSCRIBERS=src/database/subscribers.ts
 TYPEORM_MIGRATIONS=src/db/migrations/**/*.ts
+
+SKIP_PROPOSAL_APPROVAL_OPERATION=true
+SKIP_TRAIN_APPROVAL_OPERATION=true
