added image tag specification

--- a/config/example.env
+++ b/config/example.env
@@ -12,6 +12,7 @@ REDIS_ENABLED=true
 
 ### Docker
 DOCKER_IMAGE_NAME=ghcr.io/tada5hi/central-ui
+DOCKER_IMAGE_TAG=latest
 DOCKER_CONTAINER_PROJECT_PATH=/usr/src/project/
 
 ### Network
