--- a/config/example.env
+++ b/config/example.env
@@ -11,7 +11,7 @@ MQ_ENABLED=true
 REDIS_ENABLED=true
 
 ### Docker
-DOCKER_IMAGE_NAME=ghcr.io/tada5hi/central-ui
+DOCKER_IMAGE_NAME=ghcr.io/pht-medic/central-ui
 DOCKER_IMAGE_TAG=latest
 DOCKER_CONTAINER_PROJECT_PATH=/usr/src/project/
 
