add realtime-server support

--- a/config/example.env
+++ b/config/example.env
@@ -5,6 +5,9 @@ FRONTEND_PORT=3000
 BACKEND_ENABLED=true
 BACKEND_PORT=3002
 
+REALTIME_ENABLED=true
+REALTIME_PORT=3001
+
 ### Third Party
 DB_ENABLED=true
 MQ_ENABLED=true
