--- a/config/backend/example.env
+++ b/config/backend/example.env
@@ -7,6 +7,7 @@ API_URL=http://localhost:3002/
 WEB_APP_URL=http://localhost:3000/
 
 VAULT_CONNECTION_STRING=<secret>@<url>/v1
+REDIS_CONNECTION_STRING=redis://127.0.0.1
 RABBITMQ_CONNECTION_STRING=amqp://root:start123@pht-ui-mq
 HARBOR_CONNECTION_STRING=<user>:<password>@<url>/api/v2.0/
 
