--- a/config/frontend/example.env
+++ b/config/frontend/example.env
@@ -2,3 +2,4 @@ NODE_ENV=development
 
 API_URL=http://127.0.0.1:3002/
 RESULT_SERVICE_API_URL=http://127.0.0.1:3003/
+REALTIME_URL=http://localhost:3001/
