specify docker realtime name

--- a/config/example.env
+++ b/config/example.env
@@ -31,6 +31,7 @@ DOCKER_VOLUME_REDIS_NAME=pht-ui-redis
 ### Names
 DOCKER_NAME_FRONTEND=pht-ui-frontend
 DOCKER_NAME_BACKEND=pht-ui-backend
+DOCKER_NAME_REALTIME=pht-ui-realtime
 
 ### Docker
 DOCKER_NAME_DB=pht-ui-db
