updated subscriber path

--- a/config/backend/example.env
+++ b/config/backend/example.env
@@ -20,7 +20,7 @@ TYPEORM_PORT=3306
 TYPEORM_SYNCHRONIZE=false
 TYPEORM_LOGGING=false
 TYPEORM_ENTITIES=src/database/entities.ts
-TYPEORM_SUBSCRIBERS=src/database/subscribers.ts
+TYPEORM_SUBSCRIBERS = src/database/subscribers/*.ts
 TYPEORM_MIGRATIONS=src/database/migrations/**/*.ts
 
 SKIP_PROPOSAL_APPROVAL_OPERATION=true
