added vault third-party service

--- a/config/example.env
+++ b/config/example.env
@@ -10,8 +10,13 @@ REALTIME_PORT=3001
 
 ### Third Party
 DB_ENABLED=true
+DB_PORTS_EXPOSED=false
 MQ_ENABLED=true
+MQ_PORTS_EXPOSED=false
 REDIS_ENABLED=true
+REDIS_PORTS_EXPOSED=false
+VAULT_ENABLED=false
+VAULT_PORTS_EXPOSED=false
 
 ### Docker
 DOCKER_IMAGE_NAME=ghcr.io/pht-medic/central-ui
@@ -27,6 +32,7 @@ DOCKER_VOLUME_CORE_NAME=pht-ui-core
 DOCKER_VOLUME_DB_NAME=pht-ui-db
 DOCKER_VOLUME_MQ_NAME=pht-ui-mq
 DOCKER_VOLUME_REDIS_NAME=pht-ui-redis
+DOCKER_VOLUME_VAULT_NAME=pht-ui-vault
 
 ### Names
 DOCKER_NAME_FRONTEND=pht-ui-frontend
@@ -37,3 +43,4 @@ DOCKER_NAME_REALTIME=pht-ui-realtime
 DOCKER_NAME_DB=pht-ui-db
 DOCKER_NAME_MQ=pht-ui-mq
 DOCKER_NAME_REDIS=pht-ui-redis
+DOCKER_NAME_VAULT=pht-ui-vault
