--- a/config/example.env
+++ b/config/example.env
@@ -8,13 +8,19 @@ BACKEND_PORT=3002
 REALTIME_ENABLED=true
 REALTIME_PORT=3001
 
+RESULT_SERVICE_ENABLED=true
+RESULT_SERVICE_PORT=3003
+
 ### Third Party
 DB_ENABLED=true
 DB_PORTS_EXPOSED=false
+
 MQ_ENABLED=true
 MQ_PORTS_EXPOSED=false
+
 REDIS_ENABLED=true
 REDIS_PORTS_EXPOSED=false
+
 VAULT_ENABLED=false
 VAULT_PORTS_EXPOSED=false
 
@@ -28,6 +34,7 @@ DOCKER_NETWORK_NAME=pht-ui
 
 ### Volumes
 DOCKER_VOLUME_CORE_NAME=pht-ui-core
+DOCKER_VOLUME_RESULT_SERVICE_NAME=pht-ui-result-service
 
 DOCKER_VOLUME_DB_NAME=pht-ui-db
 DOCKER_VOLUME_MQ_NAME=pht-ui-mq
@@ -38,6 +45,7 @@ DOCKER_VOLUME_VAULT_NAME=pht-ui-vault
 DOCKER_NAME_FRONTEND=pht-ui-frontend
 DOCKER_NAME_BACKEND=pht-ui-backend
 DOCKER_NAME_REALTIME=pht-ui-realtime
+DOCKER_NAME_RESULT_SERVICE=pht-ui-result-service
 
 ### Docker
 DOCKER_NAME_DB=pht-ui-db
