--- a/config/realtime/example.env
+++ b/config/realtime/example.env
@@ -5,4 +5,4 @@ API_URL=http://localhost:3002/
 WEB_APP_URL=http://localhost:3000/
 
 REDIS_CONNECTION_STRING=redis://127.0.0.1
-RABBITMQ_CONNECTION_STRING=amqp://root:start123@pht-ui-mq
+VAULT_CONNECTION_STRING=<secret>@<url>/v1
