adapted deployment script for new architecture

--- a/config/ui/example.env
+++ b/config/ui/example.env
@@ -2,5 +2,5 @@ PORT=3000
 NODE_ENV=development
 
 API_URL=http://127.0.0.1:3002/
-RESULT_SERVICE_API_URL=http://127.0.0.1:3003/
+RESULT_API_URL=http://127.0.0.1:3003/
 REALTIME_URL=http://localhost:3001/
