--- a/config/example.env
+++ b/config/example.env
@@ -1,15 +1,15 @@
 ### General
-FRONTEND_ENABLED=true
-FRONTEND_PORT=3000
+ENABLED_UI=true
+UI_PORT=3000
 
-BACKEND_ENABLED=true
-BACKEND_PORT=3002
+ENABLED_API=true
+PORT_API=3002
 
 REALTIME_ENABLED=true
 REALTIME_PORT=3001
 
-RESULT_SERVICE_ENABLED=true
-RESULT_SERVICE_PORT=3003
+ENABLED_RESULT=true
+PORT_RESULT=3003
 
 ### Third Party
 DB_ENABLED=true
@@ -25,30 +25,30 @@ VAULT_ENABLED=false
 VAULT_PORTS_EXPOSED=false
 
 ### Docker
-DOCKER_IMAGE_NAME=ghcr.io/pht-medic/central-ui
+DOCKER_IMAGE_NAME=ghcr.io/pht-medic/central
 DOCKER_IMAGE_TAG=latest
 DOCKER_CONTAINER_PROJECT_PATH=/usr/src/project/
 
 ### Network
-DOCKER_NETWORK_NAME=pht-ui
+DOCKER_NETWORK_NAME=pht
 
 ### Volumes
-DOCKER_VOLUME_CORE_NAME=pht-ui-core
-DOCKER_VOLUME_RESULT_SERVICE_NAME=pht-ui-result-service
+DOCKER_VOLUME_NAME_API=pht-api
+DOCKER_VOLUME_NAME_RESULT=pht-result
 
-DOCKER_VOLUME_DB_NAME=pht-ui-db
-DOCKER_VOLUME_MQ_NAME=pht-ui-mq
-DOCKER_VOLUME_REDIS_NAME=pht-ui-redis
-DOCKER_VOLUME_VAULT_NAME=pht-ui-vault
+DOCKER_VOLUME_DB_NAME=pht-db
+DOCKER_VOLUME_MQ_NAME=pht-mq
+DOCKER_VOLUME_REDIS_NAME=pht-redis
+DOCKER_VOLUME_VAULT_NAME=pht-vault
 
 ### Names
-DOCKER_NAME_FRONTEND=pht-ui-frontend
-DOCKER_NAME_BACKEND=pht-ui-backend
-DOCKER_NAME_REALTIME=pht-ui-realtime
-DOCKER_NAME_RESULT_SERVICE=pht-ui-result-service
+DOCKER_NAME_UI=pht-ui
+DOCKER_NAME_API=pht-api
+DOCKER_NAME_REALTIME=pht-realtime
+DOCKER_NAME_RESULT=pht-result
 
 ### Docker
-DOCKER_NAME_DB=pht-ui-db
-DOCKER_NAME_MQ=pht-ui-mq
-DOCKER_NAME_REDIS=pht-ui-redis
-DOCKER_NAME_VAULT=pht-ui-vault
+DOCKER_NAME_DB=pht-db
+DOCKER_NAME_MQ=pht-mq
+DOCKER_NAME_REDIS=pht-redis
+DOCKER_NAME_VAULT=pht-vault
