fixed example.env scripts for ui, result, realtime & api

--- a/config/api/example.env
+++ b/config/api/example.env
@@ -7,12 +7,12 @@ API_URL=http://localhost:3002/
 WEB_APP_URL=http://localhost:3000/
 
 VAULT_CONNECTION_STRING=<secret>@<url>/v1
-REDIS_CONNECTION_STRING=redis://127.0.0.1
-RABBITMQ_CONNECTION_STRING=amqp://root:start123@pht-ui-mq
+REDIS_CONNECTION_STRING=redis://central-redis
+RABBITMQ_CONNECTION_STRING=amqp://root:start123@central-mq
 HARBOR_CONNECTION_STRING=<user>:<password>@<url>/api/v2.0/
 
 TYPEORM_CONNECTION=mysql
-TYPEORM_HOST=pht-ui-db
+TYPEORM_HOST=central-db
 TYPEORM_USERNAME=root
 TYPEORM_PASSWORD=start123
 TYPEORM_DATABASE=app
