--- a/config/result/example.env
+++ b/config/result/example.env
@@ -3,7 +3,7 @@ NODE_ENV=development
 
 API_URL=http://localhost:3002/
 
-REDIS_CONNECTION_STRING=redis://127.0.0.1
+REDIS_CONNECTION_STRING=redis://central-redis
 RABBITMQ_CONNECTION_STRING=amqp://<user>:<password>@<host>
 HARBOR_CONNECTION_STRING=<user>:<password>@<harbor-url>/api/v2.0/
 VAULT_CONNECTION_STRING=<secret>@<url>/v1
