add docker daemon to result-server

--- a/config/example.env
+++ b/config/example.env
@@ -21,7 +21,7 @@ MQ_PORTS_EXPOSED=false
 REDIS_ENABLED=true
 REDIS_PORTS_EXPOSED=false
 
-VAULT_ENABLED=false
+VAULT_ENABLED=true
 VAULT_PORTS_EXPOSED=false
 
 ### Docker
