updated deployment script

--- a/config/example.env
+++ b/config/example.env
@@ -5,8 +5,8 @@ UI_PORT=3000
 ENABLED_API=true
 PORT_API=3002
 
-REALTIME_ENABLED=true
-REALTIME_PORT=3001
+ENABLED_REALTIME=true
+PORT_REALTIME=3001
 
 ENABLED_RESULT=true
 PORT_RESULT=3003
