--- a/config/api/example.env
+++ b/config/api/example.env
@@ -6,10 +6,9 @@ SWAGGER_DOCUMENTATION=true
 API_URL=http://localhost:3002/
 WEB_APP_URL=http://localhost:3000/
 
-VAULT_CONNECTION_STRING=<secret>@<url>/v1
+VAULT_CONNECTION_STRING=start123@http://central-vault:8900/v1/
 REDIS_CONNECTION_STRING=redis://central-redis
 RABBITMQ_CONNECTION_STRING=amqp://root:start123@central-mq
-HARBOR_CONNECTION_STRING=<user>:<password>@<url>/api/v2.0/
 
 TYPEORM_CONNECTION=mysql
 TYPEORM_HOST=central-db
