--- a/config/realtime/example.env
+++ b/config/realtime/example.env
@@ -4,5 +4,5 @@ NODE_ENV=development
 API_URL=http://localhost:3002/
 WEB_APP_URL=http://localhost:3000/
 
+VAULT_CONNECTION_STRING=start123@http://central-vault:8090/v1/
 REDIS_CONNECTION_STRING=redis://central-redis
-VAULT_CONNECTION_STRING=<secret>@<url>/v1
