renamed result variables to train-manager

--- a/config/example.env
+++ b/config/example.env
@@ -8,8 +8,8 @@ PORT_API=3002
 ENABLED_REALTIME=true
 PORT_REALTIME=3001
 
-ENABLED_RESULT=true
-PORT_RESULT=3003
+ENABLED_TRAIN_MANAGER=true
+PORT_TRAIN_MANAGER=3003
 
 ### Third Party
 DB_ENABLED=true
@@ -34,7 +34,7 @@ DOCKER_NETWORK_NAME=central
 
 ### Volumes
 DOCKER_VOLUME_NAME_API=central-api
-DOCKER_VOLUME_NAME_RESULT=central-result
+DOCKER_VOLUME_NAME_TRAIN_MANAGER=central-train-manager
 
 DOCKER_VOLUME_DB_NAME=central-db
 DOCKER_VOLUME_MQ_NAME=central-mq
@@ -45,7 +45,7 @@ DOCKER_VOLUME_VAULT_NAME=central-vault
 DOCKER_NAME_UI=central-ui
 DOCKER_NAME_API=central-api
 DOCKER_NAME_REALTIME=central-realtime
-DOCKER_NAME_RESULT=central-result
+DOCKER_NAME_TRAIN_MANAGER=central-train-manager
 
 ### Docker
 DOCKER_NAME_DB=central-db
