--- a/config/api/example.env
+++ b/config/api/example.env
@@ -4,7 +4,7 @@ NODE_ENV=development
 SWAGGER_DOCUMENTATION=true
 
 API_URL=http://localhost:3002/
-WEB_APP_URL=http://localhost:3000/
+APP_URL=http://localhost:3000/
 
 VAULT_CONNECTION_STRING=start123@http://central-vault:8090/v1/
 REDIS_CONNECTION_STRING=redis://central-redis
