feat: add minio third-party service

--- a/config/example.env
+++ b/config/example.env
@@ -18,6 +18,9 @@ DB_PORTS_EXPOSED=false
 MQ_ENABLED=true
 MQ_PORTS_EXPOSED=false
 
+MINIO_ENABLED=true
+MINIO_PORTS_EXPOSED=false
+
 REDIS_ENABLED=true
 REDIS_PORTS_EXPOSED=false
 
