--- a/config/train-manager/example.env
+++ b/config/train-manager/example.env
@@ -3,6 +3,7 @@ NODE_ENV=development
 
 API_URL=http://localhost:3002/
 
+MINIO_CONNECTION_STRING=http://admin:start123@central-minio:9000
 VAULT_CONNECTION_STRING=start123@http://central-vault:8090/v1/
 REDIS_CONNECTION_STRING=redis://central-redis
 RABBITMQ_CONNECTION_STRING=amqp://root:start123@central-mq
