--- a/config/example.env
+++ b/config/example.env
@@ -41,6 +41,7 @@ DOCKER_VOLUME_NAME_TRAIN_MANAGER=central-train-manager
 
 DOCKER_VOLUME_DB_NAME=central-db
 DOCKER_VOLUME_MQ_NAME=central-mq
+DOCKER_VOLUME_MINIO_NAME=central-minio
 DOCKER_VOLUME_REDIS_NAME=central-redis
 DOCKER_VOLUME_VAULT_NAME=central-vault
 
