feat: add authup service

--- a/config/api/example.env
+++ b/config/api/example.env
@@ -4,6 +4,7 @@ NODE_ENV=development
 SWAGGER_DOCUMENTATION=true
 
 API_URL=http://localhost:3002/
+AUTH_API_URL=http://localhost:3010/
 APP_URL=http://localhost:3000/
 
 MINIO_CONNECTION_STRING=http://admin:start123@central-minio:9000
@@ -19,9 +20,6 @@ TYPEORM_DATABASE=app
 TYPEORM_PORT=3306
 TYPEORM_SYNCHRONIZE=false
 TYPEORM_LOGGING=false
-TYPEORM_ENTITIES=src/database/entities.ts
-TYPEORM_SUBSCRIBERS=src/database/subscribers/*.ts
-TYPEORM_MIGRATIONS=src/database/migrations/**/*.ts
 
 SKIP_PROPOSAL_APPROVAL_OPERATION=true
 SKIP_TRAIN_APPROVAL_OPERATION=true
