--- a/config/example.env
+++ b/config/example.env
@@ -12,6 +12,9 @@ ENABLED_TRAIN_MANAGER=true
 PORT_TRAIN_MANAGER=3003
 
 ### Third Party
+AUTHUP_ENABLED=true
+AUTHUP_PORTS_EXPOSED=true
+
 DB_ENABLED=true
 DB_PORTS_EXPOSED=false
 
