--- a/config/ui/example.env
+++ b/config/ui/example.env
@@ -1,5 +1,6 @@
 PORT=3000
 NODE_ENV=development
 
-API_URL=http://127.0.0.1:3002/
+API_URL=http://localhost:3002/
+AUTH_API_URL=http://localhost:3010/
 REALTIME_URL=http://localhost:3001/
