fix: renamed AUTH_API_URL to AUTHUP_API_URL

--- a/config/api/example.env
+++ b/config/api/example.env
@@ -4,9 +4,9 @@ NODE_ENV=development
 SWAGGER_DOCUMENTATION=true
 
 API_URL=http://localhost:3002/
-AUTH_API_URL=http://localhost:3010/
 APP_URL=http://localhost:3000/
 
+AUTHUP_API_URL=http://localhost:3010/
 MINIO_CONNECTION_STRING=http://admin:start123@central-minio:9000
 VAULT_CONNECTION_STRING=start123@http://central-vault:8090/v1/
 REDIS_CONNECTION_STRING=redis://central-redis
