--- a/config/ui/example.env
+++ b/config/ui/example.env
@@ -2,5 +2,6 @@ PORT=3000
 NODE_ENV=development
 
 API_URL=http://localhost:3002/
-AUTH_API_URL=http://localhost:3010/
 REALTIME_URL=http://localhost:3001/
+
+AUTHUP_API_URL=http://localhost:3010/
