--- a/config/train-manager/example.env
+++ b/config/train-manager/example.env
@@ -2,8 +2,8 @@ PORT=3000
 NODE_ENV=development
 
 API_URL=http://localhost:3002/
-AUTH_API_URL=http://localhost:3010/
 
+AUTHUP_API_URL=http://localhost:3010/
 MINIO_CONNECTION_STRING=http://admin:start123@central-minio:9000
 VAULT_CONNECTION_STRING=start123@http://central-vault:8090/v1/
 REDIS_CONNECTION_STRING=redis://central-redis
