fix: adjusted default example.env + third-party start command

--- a/config/example.env
+++ b/config/example.env
@@ -42,6 +42,7 @@ DOCKER_NETWORK_NAME=central
 DOCKER_VOLUME_NAME_API=central-api
 DOCKER_VOLUME_NAME_TRAIN_MANAGER=central-train-manager
 
+DOCKER_VOLUME_AUTHUP_NAME=central-authup
 DOCKER_VOLUME_DB_NAME=central-db
 DOCKER_VOLUME_MQ_NAME=central-mq
 DOCKER_VOLUME_MINIO_NAME=central-minio
@@ -55,6 +56,7 @@ DOCKER_NAME_REALTIME=central-realtime
 DOCKER_NAME_TRAIN_MANAGER=central-train-manager
 
 ### Docker
+DOCKER_NAME_AUTHUP=central-authup
 DOCKER_NAME_DB=central-db
 DOCKER_NAME_MQ=central-mq
 DOCKER_NAME_REDIS=central-redis
