fix: adjusted default authup port for env presets

--- a/config/realtime/example.env
+++ b/config/realtime/example.env
@@ -1,6 +1,6 @@
 PORT=3000
 NODE_ENV=development
 
-AUTHUP_API_URL=http://localhost:3010/
+AUTHUP_API_URL=http://central-authup:3000/
 VAULT_CONNECTION_STRING=start123@http://central-vault:8090/v1/
 REDIS_CONNECTION_STRING=redis://central-redis
