--- a/config/api/example.env
+++ b/config/api/example.env
@@ -6,7 +6,7 @@ SWAGGER_DOCUMENTATION=true
 API_URL=http://localhost:3002/
 APP_URL=http://localhost:3000/
 
-AUTHUP_API_URL=http://localhost:3010/
+AUTHUP_API_URL=http://central-authup:3000/
 MINIO_CONNECTION_STRING=http://admin:start123@central-minio:9000
 VAULT_CONNECTION_STRING=start123@http://central-vault:8090/v1/
 REDIS_CONNECTION_STRING=redis://central-redis
